# AnyaTelegramBotAI

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  data.sql  docker-compose.yml  pyproject.toml
src/database/: config.py  database.config.py
src/entry_to_telegram/: main.py
