[tool.poetry]
name = "AnyaTelegramBotAI"
version = "0.1.0"
description = ""
authors = ["mac <risephoenixpuryfire@gmail.com>"]
readme = "README.md"


packages = [
  { include = "src" },
]


[tool.poetry.dependencies]
python = "^3.10"
logging = "^0.4.9.6"
pytest = "^8.3.2"
gunicorn = "^23.0.0"
aiogram = "^3.12.0"
pytelegrambotapi = "^4.22.1"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"


[build-system]
requires = ["poetry-core >= 1.8.3"]
build-backend = "poetry.core.masonry.api"
